## data_collector.py
import pandas as pd
from typing import Optional

class DataCollector:
    def __init__(self):
        pass

    def collect_data(self) -> Optional[pd.DataFrame]:
        # This is a placeholder method. In a real-world scenario, this method would connect to a data source,
        # collect data, and return it in a pandas DataFrame.
        # For the purpose of this example, we will return an empty DataFrame.
        print("Collecting data...")
        return pd.DataFrame()

    def compare_data(self, current_data: pd.DataFrame, past_data: pd.DataFrame) -> Optional[pd.DataFrame]:
        # This is a placeholder method. In a real-world scenario, this method would compare two dataframes,
        # and return a dataframe with the differences.
        # For the purpose of this example, we will return an empty DataFrame.
        print("Comparing data...")
        return pd.DataFrame()
